@YELP_HELP_RULES@

HELP_ID = mate-power-manager
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = \
	figures/applet-brightness.png \
	figures/applet-inhibit.png \
	figures/gpm-cell-capacity.png \
	figures/gpm-charged.png \
	figures/gpm-critical.png \
	figures/gpm-low.png \
	figures/gpm-prefs-ac.png \
	figures/gpm-prefs-battery.png \
	figures/gpm-prefs-general.png \
	figures/gpm-stats-graph.png \
	figures/gpm-suspend-problem.png \
	figures/gpm-unplugged.png \
	figures/gs-prefs.png

HELP_LINGUAS = ca de el en_GB es eu fi fr hu it oc pa ru sv zh_CN
