gnome.yelp(
  meson.project_name(),
  media: [
    'figures/applet-brightness.png',
    'figures/applet-inhibit.png',
    'figures/gpm-cell-capacity.png',
    'figures/gpm-charged.png',
    'figures/gpm-critical.png',
    'figures/gpm-low.png',
    'figures/gpm-prefs-ac.png',
    'figures/gpm-prefs-battery.png',
    'figures/gpm-prefs-general.png',
    'figures/gpm-stats-graph.png',
    'figures/gpm-suspend-problem.png',
    'figures/gpm-unplugged.png',
    'figures/gs-prefs.png',
  ],
  sources: [
    'index.docbook', 
    'legal.xml'
  ]
)
