mps_help_sources = [
  'index.docbook',
  'legal.xml',
]

gnome.yelp(
  'mate-power-manager',
  sources: mps_help_sources,
  media: [
    'figures/applet-brightness.png',
    'figures/applet-inhibit.png',
    'figures/gpm-cell-capacity.png',
    'figures/gpm-charged.png',
    'figures/gpm-critical.png',
    'figures/gpm-low.png',
    'figures/gpm-prefs-ac.png',
    'figures/gpm-prefs-battery.png',
    'figures/gpm-prefs-general.png',
    'figures/gpm-stats-graph.png',
    'figures/gpm-suspend-problem.png',
    'figures/gpm-unplugged.png',
    'figures/gs-prefs.png',
  ],
)
